# sifter-skillup

./: .gitignore  App.tsx  CLAUDE.md  Dockerfile  README.md  app.json  docker-compose.yml  eas.json  fly.toml  minikit.config.ts  netlify.toml  package.json  pnpm-lock.yaml  portfolio-schema.sql  project-structure.txt  render.yaml  supabase-schema.sql  tsconfig.json
.github/workflows/: ci.yml  deploy-web.yml
__tests__/: ErrorBoundary.test.tsx  api.test.ts
backend/: .env.example  auth.py  celery_worker.py  community_routes.py  config.py  crypto_utils.py  database.py  main.py  missing_routes.py  models.py  portfolio_routes.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  test_auth.py  test_game.py  test_portfolio.py
docs/: GITHUB_SETUP.md
scripts/: generateSimulators.ts
src/components/: CelebrationOverlay.tsx  CurriculumPreview.tsx  DisclaimerFooter.tsx  EmptyState.tsx  ErrorBoundary.tsx  FlagModal.tsx  LoadingScreen.tsx  MascotLayer.tsx  OAuthConsentModal.tsx  OfflineBanner.tsx  ReviewModal.tsx  ScreenErrorBoundary.tsx  Skeleton.tsx  SyncIndicator.tsx
src/data/: externalResources.ts  fields.ts  islands.ts  levels.ts  portfolioPlatforms.ts  pythonLevels.ts  quantIslands.ts  quantLevels.ts  skillTypes.ts  skills.ts
src/hooks/: useAuth.ts  useAuth.tsx  useCommunity.ts  useLessonEngine.ts  useOfflineSync.ts  useProgress.ts  useResume.ts
src/lib/: api.ts  artifactBuilder.ts  diaryEngine.ts  errors.ts  haptics.ts  labGenerator.ts  notificationEngine.ts  notifications.ts  offlineQueue.ts  offlineStorage.ts  progressionEngine.ts  queryClient.ts  (+3 more)
(+49 files in other folders)
